--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,15 @@ version: '3.1'
 services:
   nginx:
     image: nginx:1.17-alpine
-    container_name: birdie-nginx
+    container_name: nginx
     restart: unless-stopped
     ports:
       - 80:80
     volumes:
-      - "./nginx.conf:/etc/nginx/conf.d/nginx.conf"
+      - "./nginx/:/etc/nginx/conf.d/"
     networks:
-      - birdie
+      - web
   
 networks:
-  birdie:
+  web:
     driver: bridge
